--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -6,7 +6,8 @@
     <body>
         <div class="main-content">
             {{>header}} 
-        <img class="portrait" src="/img/apple.png">
+            <p>This web app is created by Jay Ostwal. It uses darksky.net and mapbox.com</p>
+            <img class="portrait" src="/img/apple.png">
         </div>
        
          {{>footer}}
